fix: locatio api and update sqlc version
